-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8.0
-
None
-
9ac6494f1 (dev), 672bde49e (6.9)
can't use Dialog of QtQuick.Dialogs in qml.
Archlinux/KDE
command: qml6 a.qml
result:
QQmlApplicationEngine failed to load component
file:///tmp/a.qml:9:2: Dialog is not a type
qml: Did not load any objects, exiting.
code:
import QtQuick.Controls import QtQuick.Dialogs as Dlg ApplicationWindow { visible: true width: 800 height: 480 Button { text: "open" onClicked: dlg.open() } Dlg.Dialog { id: dlg } }
| For Gerrit Dashboard: QTBUG-131576 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 617518,3 | doc: Mention that QQuickAbstractDialog cannot be created in QML | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 618084,2 | doc: Mention that QQuickAbstractDialog cannot be created in QML | 6.9 | qt/qtdeclarative | Status: MERGED | +2 | 0 |