doc: Mention that QQuickAbstractDialog cannot be created in QML

It's a QML_ANONYMOUS type.

Fixes: QTBUG-131576
Pick-to: 6.9
Change-Id: Ib91ec10f3dd174c3ca4a2d10b4c2a1137d2a3394
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>